--- a/assets/css/ckImageManager.css
+++ b/assets/css/ckImageManager.css
@@ -17,16 +17,20 @@
     text-align: center;
     grid-area: right;
     padding: 15px;
+    width: 250px;
 }
 
 .ck-grid-container{
     position: relative;
     display: grid;
-    grid-gap: 0px 0px;
     grid-template-areas:
             'header header header header header header'
             'status status status status status right'
             'main main main main main right';
+
+    grid-template-columns: 200px 1fr 200px;
+    grid-template-rows: auto 1fr auto;
+    grid-gap: 10px;
 }
 
 .ck-details{
@@ -200,4 +204,13 @@
 
 .ck-selected-img-container{
     padding: 15px 0;
+}
+
+.ck-detail{
+    word-wrap: break-word;
+}
+
+.ck-selected-img-name{
+    margin-bottom: 0;
+    font-size: 13px;
 }
