--- a/assets/css/ckImageManager.css
+++ b/assets/css/ckImageManager.css
@@ -151,6 +151,20 @@
 
 .ck-img-box{
     display: inline-grid;
+    padding: 5px;
+    background-color: #f7f8f9;
+    cursor: pointer;
+    -webkit-box-shadow: 9px 10px 14px 0px rgba(227,220,227,0.64);
+    -moz-box-shadow: 9px 10px 14px 0px rgba(227,220,227,0.64);
+    box-shadow: 9px 10px 14px 0px rgba(227,220,227,0.64);
+}
+
+.ck-img-box:hover{
+    outline: 1px solid #39a1f4;
+}
+
+.ck-img-box.active{
+    outline: 2px solid #39a1f4;
 }
 
 .ck-img-box img{
@@ -213,4 +227,8 @@
 .ck-selected-img-name{
     margin-bottom: 0;
     font-size: 13px;
+}
+
+.ck-img-data{
+    font-size: 10px;
 }
