--- a/assets/css/ckImageManager.css
+++ b/assets/css/ckImageManager.css
@@ -149,7 +149,7 @@
 .ck-image-list{
     display: grid;
     grid-column-gap: 10px;
-    /*grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));*/
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     padding: 10px;
 }
 
