--- a/assets/css/ckImageManager.css
+++ b/assets/css/ckImageManager.css
@@ -10,6 +10,25 @@
     display: none;
 }
 
+#no-image{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.no-image-content{
+    border: 1px solid #d7dcdf;
+    padding: 15px 20px;
+    border-radius: 4px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+#no-image i{
+    font-size: 85px;
+    color: #39a1f4;
+}
+
 .ck-image-list{
     grid-area: main;
 }
@@ -35,6 +54,32 @@
     grid-gap: 10px;
 }
 
+#ck-list-loader{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 66px;
+    text-align: center;
+    background: rgba(255,255,255,0.7);
+    display: none;
+}
+
+#ck-list-loader .ck-spinner-border{
+    position: relative;
+    top: 50%;
+    height: 150px;
+    width: 150px;
+    display: inline-block;
+    vertical-align: text-bottom;
+    border: .25em solid currentColor;
+    border-right-color: #007bff;
+    border-right-color: transparent;
+    border-radius: 50%;
+    -webkit-animation: spinner-border .75s linear infinite;
+    animation: spinner-border .75s linear infinite;
+}
+
 .ck-details{
     position: absolute;
     top: 0;
@@ -44,7 +89,7 @@
     height: 100%;
     background: #fff;
     border-right: 1px solid #d7dcdf;
-    z-index: 99;
+    z-index: 1001;
 }
 
 .ck-details-header{
@@ -132,6 +177,7 @@
 #ck-upload-status{
     position: relative;
     padding: 20px 30px;
+    z-index: 1000;
 }
 
 .ck-progress-container{
